Added SCSS to universal.scss, global.scss and content.scss

--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,6 @@
-// Final list of SCSS imports
+/*=======================================*\
+ * List of imports
+\*=======================================*/
 
 @import "universal.scss";
 @import "global.scss";
