--- a/content.scss
+++ b/content.scss
@@ -1,5 +1,5 @@
 /*=======================================*\
- * ## Content
+ * ## Content 
 \*=======================================*/
 #content {
 	
@@ -18,4 +18,28 @@
 		float: left;
 		width: 30%;
 	}
+}
+
+
+
+
+
+/*=======================================*\
+ * ## Content Styling
+\*=======================================*/
+#content {
+
+	.entry-header {}
+
+	.entry-title {
+
+		& a {}
+
+	}
+
+	.entry-meta {}
+
+	.entry-content {}
+
+	.entry-footer {}
 }
