--- a/global.scss
+++ b/global.scss
@@ -1,7 +1,23 @@
 body {
-
+	font-family: sans-serif;
+	font-size: 1.15rem;
+	line-height: 1.5;
 }
 
 a {
+	color: #333;
 	
+	&:link {}
+
+	&:visited {
+		color: #333;
+	}
+
+	&:hover {
+		color: #555;
+	}
+
+	&:active {
+		color: #000;
+	}
 }
