--- a/content.scss
+++ b/content.scss
@@ -11,11 +11,13 @@
 	#primary {
 		float: left;
 		width: 70%;
+		padding: 0 15px;
 	}
 
 	#secondary {
 		float: left;
 		width: 30%;
+		padding: 0 15px;
 	}
 }
 
@@ -51,14 +53,14 @@
 \*=======================================*/
 #content {
 	.widget {
-		a {}
-
 		& ul, ol {
 			margin-left: 0;
 			padding-left: 0;
-			list-style-type: none;
+			list-style: none;
 		}
 	}
+
+	a {}
 
 	.widget-title {
 
