Added file comments for all the files

--- a/global.scss
+++ b/global.scss
@@ -1,3 +1,12 @@
+/**
+ * Styling for generic settings, such as-
+ * - font family|size|weight, color
+ * - line height
+ * - anchor color for link|visited|hover|active
+ * - input field  
+ * - tags such as strong, pre, code
+ */
+
 body {
 	font-family: sans-serif;
 	font-size: 1.15em;
