--- a/header.scss
+++ b/header.scss
@@ -1,3 +1,9 @@
+/**
+ * Styling for 'header.php'
+ * Styling for navigation menu must
+ * be inside 'navigation.scss'.
+ */
+
 .site-header {
-	
+
 }
