--- a/universal.scss
+++ b/universal.scss
@@ -1,3 +1,8 @@
+/**
+ * Universal classes are meant to be used in 
+ * the HTML|PHP files for quick usage
+ */
+
 /*=======================================*\
  * ## Universal Classes
 \*=======================================*/
