--- a/content.scss
+++ b/content.scss
@@ -1,3 +1,8 @@
+/**
+ * Styling for everything that lies between 
+ * the header and footer sections.
+ */
+
 /*=======================================*\
  * ## Content 
 \*=======================================*/
@@ -41,6 +46,14 @@
 
 	.entry-content {}
 
+	.entry-footer {}
+}
+
+
+/*
+* Optional
+*/
+.page #content {
 	.entry-footer {}
 }
 
