Added file comments for all the files

--- a/content.scss
+++ b/content.scss
@@ -16,13 +16,13 @@
 	#primary {
 		float: left;
 		width: 70%;
-		padding: 0 15px;
+		padding: 0 1em;
 	}
 
 	#secondary {
 		float: left;
 		width: 30%;
-		padding: 0 15px;
+		padding: 0 1em;
 	}
 }
 
